Fixing broken rationale on mobile

--- a/src/css/story/words.styl
+++ b/src/css/story/words.styl
@@ -52,7 +52,7 @@
           display flex
           flex-direction row
           font-family $national
-          max-height 675px
+          max-height 750px
           max-width $column-width
           overflow: hidden;
 
